framework/tests/framework/MissingSymbolCrash.java
public class MissingSymbolCrash {
    public void test() {
        // :: error: cannot find symbol
        lst.add(s);
    }
}
